<?xml version="1.0"?>
<package>
  <name>mild_base_driving</name>
  <version>0.0.0</version>
  <description>The mild_base_driving package calculates and publishes the odometry informations, transforms the velocity command into differential drive commands and writes it on the mild_base_driving bus</description>
  <maintainer email="pascal.meissner@kit.edu">Pascal Meißner</maintainer>
  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>SDL</build_depend>
  <build_depend>Boost</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>SDL</run_depend>
  <run_depend>Boost</run_depend>

</package>
